ARROW-12670: [C++] Fix extract_regex output after non-matching values

Closes #10287 from pitrou/ARROW-12670-extract-regex-nulls

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>